--- a/Ticket_manager/index.html
+++ b/Ticket_manager/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <h1 class="text-3xl font-bold underline bg-red-500">
+      Vite + React + Tailwind CSS
+    Hello world!
+  </h1>
   </head>
   <body>
     <div id="root"></div>
